--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "ananas-fe-shared",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/index.ts",
   "repository": "https://github.com/ananasGit/ananas-fe-shared.git",
   "author": "bozidar-gajic-ananas <bozidar.gajic@ananas.rs>",
   "license": "MIT",
   "devDependencies": {
     "typescript": "^5.6.2"
-  }
+  },
+  "types": "src/index.ts"
 }
