--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "src/index.ts",
   "repository": "https://github.com/ananasGit/ananas-fe-shared.git",
-  "author": "bozidar-gajic-ananas <bozidar.gajic@ananas.rs>",
+  "author": "Ananas FE team",
   "license": "MIT",
   "devDependencies": {
     "typescript": "^5.6.2"
