--- a/package.json
+++ b/package.json
@@ -8,5 +8,8 @@
   "devDependencies": {
     "typescript": "^5.6.2"
   },
-  "types": "src/index.ts"
+  "types": "src/index.ts",
+  "scripts": {
+    "build": "tsc"
+  }
 }
