--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,9 +4,9 @@ name: CI
 
 # Controls when the action will run.
 on:
-  release:
-    types: [published]
-
+  # Triggers the workflow on push or pull request events but only for the master branch
+  push:
+    branches: [master]
 jobs:
   build:
     runs-on: ubuntu-latest
