Check NPM_TOKEN

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,7 +20,9 @@ jobs:
           token: ${{secrets.GITHUB_TOKEN}}
       - run: npm ci
       - run: npm run build
-      # - run: sleep 500000
+      - run: echo "NODE_AUTH_TOKEN is $NODE_AUTH_TOKEN"
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
       - run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
