--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,9 +20,9 @@ jobs:
           token: ${{secrets.GITHUB_TOKEN}}
       - run: npm ci
       - run: npm run build
-      - run: echo "NODE_AUTH_TOKEN is $NODE_AUTH_TOKEN"
+      - run: echo "NODE_AUTH_TOKEN is GITHUB_TOKEN"
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - run: npm publish
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
