--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ananas-fe-shared",
+  "name": "@ananasgit/ananas-fe-shared",
   "version": "1.0.0",
   "main": "src/index.ts",
   "type": "module",
