--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "main": "src/index.ts",
   "type": "module",
   "author": "ananas",
-  "repository": "https://github.com/ananasGit/ananas-fe-shared.git",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ananasGit/ananas-fe-shared.git"
+  },
   "license": "MIT",
   "devDependencies": {
     "typescript": "^5.6.2"
@@ -12,5 +15,8 @@
   "types": "src/index.ts",
   "scripts": {
     "build": "tsc"
+  },
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/"
   }
 }
