--- a/package.json
+++ b/package.json
@@ -17,6 +17,6 @@
     "build": "tsc"
   },
   "publishConfig": {
-    "registry": "https://npm.pkg.github.com/"
+    "@ananasgit:registry": "https://npm.pkg.github.com/"
   }
 }
